packages/kit/test/apps/basics/src/routes/errors/load-error-malformed-server.svelte
<script context="module">
	/** @type {import('@sveltejs/kit').Load} */
	export async function load() {
		// @ts-expect-error
		return { status: 555, error: {} };
	}
</script>
